--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul>
                 <li><a href="https://twitter.com/RichieBrennan"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="mailto:<richieramone82@gmail.com>"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/Brenho"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/RichieJBrennan"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div id="footer-text">
