Changing from .getJSON to fetch

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <ul>
                 <li><a href="https://twitter.com/RichieBrennan"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="mailto:<richieramone82@gmail.com>"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/RichieJBrennan"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/Brenho"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div id="footer-text">
-            <p>Powered by: <a href="http://open-notify.org/">open-notify</a></p>
+            <p>Powered by: <a href="http://open-notify.org/">open-notify</a> &amp; <a href="https://wheretheiss.at/w/developer">where the ISS at?</a></p>
             <p>Copyright &copy; Richie Brennan 2017</p>
         </div>
     </div>
